test/langtools/tools/javac/annotations/typeAnnotations/failures/CantAnnotateMissingSymbol.out
CantAnnotateMissingSymbol.java:12:14: compiler.err.cant.resolve.location: kindname.class, NoSuch, , , (compiler.misc.location: kindname.class, CantAnnotateMissingSymbol, null)
1 error
